# wg-ui

./: .gitignore  PROJECT_STRUCTURE.md  README.md  README_API.md  alembic.ini  deploy.sh  install_wg_ui.sh  main.py  pyproject.toml  requirements.txt  start.py  wg.sh  wg_const.py  wg_installer.py
app/core/: client_names.py  config.py  database.py  dependencies.py  exceptions.py  logging.py  security.py
app/infrastructure/wireguard/: __init__.py  backend.py
app/models/: database.py  schemas.py
app/routers/: auth.py  clients.py
app/services/: auth.py  clients.py  qr_generator.py  wireguard.py
deploy/: env.production.example
deploy/nginx/: wg-ui.bootstrap.conf  wg-ui.conf
deploy/systemd/: wg-ui.service
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: CreateClientModal.vue  QRCodeModal.vue
frontend/src/composables/: useDownloads.js  useFormatters.js
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: auth.js  clients.js
frontend/src/views/: ClientsView.vue  HomeView.vue  LoginView.vue
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_client_runtime_stats.py
